--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,7 @@ lib_deps =
 	mobizt/ESP Mail Client@^1.6.1
 	adafruit/DHT sensor library@^1.4.3
 	enviromonitor/BME280_Light@0.0.0-alpha+sha.600667f3a6
+	ayushsharma82/AsyncElegantOTA@^2.2.6
+	esphome/AsyncTCP-esphome@^1.2.2
+	esphome/ESPAsyncWebServer-esphome@^2.1.0
 lib_ldf_mode = deep+
